--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "sowebdev/mageunit",
+  "name": "zouhair2015/mageunit1.9.4",
   "type": "magento-library",
   "description": "Simple unit testing framework for Magento 1.x",
   "keywords": [
@@ -7,16 +7,16 @@
     "magento",
     "test"
   ],
-  "homepage": "https://github.com/sowebdev/mageunit",
+  "homepage": "https://github.com/zouhair2015/mageunit1.9.4",
   "license": "MIT",
   "authors": [
     {
-      "name": "Sören Ohnmeiss",
-      "email": "soren.ohnmeiss@gmail.com"
+      "name": "Zouhair Mouhsine",
+      "email": "zouhair.mouhsine@gmail.com"
     }
   ],
   "require": {
     "php": ">=5.3.0",
-    "composer/installers": "~1.0"
+    "composer/installers": "~1.6"
   }
 }
