--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,6 @@
   ],
   "require": {
     "php": ">=5.3.0",
-    "composer/installers": "~1.6",
-    "phpunit/phpunit": "^6"
+    "composer/installers": "~1.6"
   }
 }
